--- a/todo.txt
+++ b/todo.txt
@@ -3,3 +3,4 @@
 - add support for orbweaver
 -- generalize tartarus logic
 - improve macro binding
+- "there are 2 dbus signals notifying when devices are added and removed": make use of them
