--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,8 @@
 - improve mouse UI
 - add support for naga hex v2
-- add support for orbweaver
--- generalize tartarus logic
-- improve macro binding
+- [possibly done] add support for orbweaver
+-- [possibly done] generalize tartarus logic
+- [possibly done] improve macro binding
 - "there are 2 dbus signals notifying when devices are added and removed": make use of them
-- device.py 10:14: encapsulate in a method
+- device.py 11:15: encapsulate in a method
+- update readme
