--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,9 @@
+- [wip] add support for orbweaver
+- add record keystroke feature in macro section
 - improve mouse UI
-- add support for naga hex v2
-- [possibly done] add support for orbweaver
--- [possibly done] generalize tartarus logic
-- [possibly done] improve macro binding
 - "there are 2 dbus signals notifying when devices are added and removed": make use of them
 - device.py 11:15: encapsulate in a method
 - update readme
+- [done] improve macro binding
+- [done] generalize tartarus logic
+- [done] add support for naga hex v2
