--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,13 @@
+- "I would start getting your application to require a version range of the daemon. Reason being if I change something and release a package, new daemon won't become active until restart but your packages (and python library) will"
+- macro setting on startup spams daemon log
+- spectrum icon is the only one colored
+- refresh duplicates devices
 - [wip] add support for orbweaver
-- add record keystroke feature in macro section
 - improve mouse UI
 - "there are 2 dbus signals notifying when devices are added and removed": make use of them
 - device.py 11:15: encapsulate in a method
-- update readme
+- [almost done] add record keystroke feature in macro section
+- [done] update readme
 - [done] improve macro binding
 - [done] generalize tartarus logic
 - [done] add support for naga hex v2
