updated debian changelog

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,4 +2,4 @@ razercommander (1.2.0) unstable;
 
   * Initial release
 
- -- Gabriele Musco (GabMus) emaildigabry@gmail.com Sat, 23 Sep 2017 12:34:26 +0200
+ -- Gabriele Musco <emaildigabry@gmail.com>  Sat, 23 Sep 2017 12:34:26 +0200
